# Dioxus-i18n

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
src/: components.rs  fluent.rs  hooks.rs  lib.rs  provider.rs  storage.rs
src/backends/: fluent.rs  icu.rs  mod.rs
