[package]
name = "dioxus-i18n"
version = "0.1.0"
edition = "2021"

[features]
default = ["web", "fluent"]
web = ["dep:gloo", "dep:dioxus-web",]
desktop = []
fluent = ["dep:fluent-bundle"]

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus", optional = true }
unic-langid = { version = "0.9.0", features = ["macros", "serde"] }
gloo = { version = "0.8.0", optional = true }
fluent-bundle = { version = "0.15.2", optional = true }
serde = "1.0.144"
