[package]
name = "dioxus-i18n"
version = "0.1.0"
edition = "2021"

[features]
default = ["web", "fluent"]
web = ["dep:gloo", "dep:dioxus-web",]
desktop = ["dep:dioxus-desktop"]
fluent = ["dep:fluent-bundle"]
icu = ["dep:icu"]

[dependencies]
dioxus = { version = "0.3" }
unic-langid = { version = "0.9.0", features = ["macros", "serde"] }
serde = "1.0.144"

# web
dioxus-web = { version = "0.3", optional = true }
gloo = { version = "0.8.0", optional = true }

# desktop
dioxus-desktop = { version = "0.3", optional = true }

# fluent
fluent-bundle = { version = "0.15.2", optional = true }

# icu
icu = { version = "1.2", optional = true }
